CASSANDRA-18511 Add support for JMX in the in-jvm dtest framework